; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_spa_misc.c_spa_vdev_config_enter.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_spa_misc.c_spa_vdev_config_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@spa_namespace_lock = common dso_local global i32 0, align 4
@SCL_ALL = common dso_local global i32 0, align 4
@RW_WRITER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @spa_vdev_config_enter(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @MUTEX_HELD(i32* @spa_namespace_lock)
  %4 = call i32 @ASSERT(i32 %3)
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @SCL_ALL, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @RW_WRITER, align 4
  %9 = call i32 @spa_config_enter(i32* %5, i32 %6, i32* %7, i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @spa_last_synced_txg(i32* %10)
  %12 = add nsw i64 %11, 1
  ret i64 %12
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @MUTEX_HELD(i32*) #1

declare dso_local i32 @spa_config_enter(i32*, i32, i32*, i32) #1

declare dso_local i64 @spa_last_synced_txg(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
